--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url('http://farm3.staticflickr.com/2832/12303719364_c25cecdc28_b.jpg') fixed;
+    background: url('http://tokyo-sky-tree.up.n.seesaa.net/tokyo-sky-tree/image/20120321_1.JPG?d=a1') fixed;
     background-size: cover;
     padding: 0;
     margin: 0;
