--- a/bxslider/jquery.bxslider.css
+++ b/bxslider/jquery.bxslider.css
@@ -14,16 +14,52 @@
 /** RESET AND LAYOUT
 ===================================*/
 
-.bx-wrapper {
-	position: relative;
-	margin: 0 auto 60px;
-	padding: 0;
-	*zoom: 1;
+
+.bx-controls-direction a {
+    position: absolute;
+    top: 40%;
+    margin-top: 0;
+    width: 100px;
+    height: 80px;
+    z-index: 9999;
+    color: #fcfcfc;
+    text-decoration: none;
+    font-size: 35px;
+    font-weight: bold;
+    -moz-text-shadow: 1px 1px 2px #333333;
+    -webkit-text-shadow: 1px 1px 2px #333333;
+    text-shadow: 1px 1px 2px #333333;
 }
 
-.bx-wrapper img {
-	max-width: 100%;
-	display: block;
+
+.bx-wrapper {
+    width: 500px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.bx-wrapper .bx-pager {
+    text-align: center;
+    margin-top: 5px;
+}
+
+.bx-wrapper .bx-pager .bx-pager-item {
+    display: inline-block;
+    *zoom: 1;
+    *display: inline;
+}
+
+.bx-wrapper .bx-controls-direction a {
+    position: absolute;
+    z-index: 9999;
+}
+
+.bx-prev {
+    left: 10px;
+}
+
+.bx-wrapper .bx-next {
+    right: 10px;
 }
 
 /** THEME
