--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 body
 {
-    background: url('http://tokyo-sky-tree.up.n.seesaa.net/tokyo-sky-tree/image/20120321_1.JPG?d=a1') fixed;
+    background: url('http://www.ahirunum.net/wp-content/uploads/2013/03/20130120-DSM_1925-3-e1363928990861.jpg') fixed;
     background-size: cover;
     padding: 0;
     margin: 0;
